force-app/main/default/objects/Act_Cadence_Reassign_Queue__c/Act_Cadence_Reassign_Queue__c.object-meta.xml
<CustomObject>
    <label>Cadence Reassign Queue</label>
    <nameField>
        <displayFormat>CRQ-{00000000}</displayFormat>
        <label>Cadence Reassign Queue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cadence Reassign Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>