force-app/main/default/objects/Act_Cadence_Reassign_Queue__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cadence Reassign Queues</relationshipLabel>
    <relationshipName>CadenceReassignQueues</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>