force-app/main/default/objects/Act_Cadence_Reassign_Queue__c/fields/BatchJobId__c.field-meta.xml
<CustomField>
    <fullName>BatchJobId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Batch Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>