force-app/main/default/objects/Act_Cadence_Reassign_Queue__c/fields/HasActiveCadences__c.field-meta.xml
<CustomField>
    <fullName>HasActiveCadences__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Active Cadences</label>
    <type>Checkbox</type>
</CustomField>