force-app/main/default/objects/Act_Cadence_Reassign_Queue__c/fields/NewAdvisorId__c.field-meta.xml
<CustomField>
    <fullName>NewAdvisorId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New Advisor Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>