force-app/main/default/objects/Act_Cadence_Reassign_Queue__c/fields/NewOwner__c.field-meta.xml
<CustomField>
    <fullName>NewOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>New Owner Cadence Reassign Queues</relationshipLabel>
    <relationshipName>NewOwnerCadenceReassignQueues</relationshipName>
    <type>Lookup</type>
</CustomField>