force-app/main/default/objects/Act_Cadence_Reassign_Queue__c/fields/NextAttemptAt__c.field-meta.xml
<CustomField>
    <fullName>NextAttemptAt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Attempt At</label>
    <type>DateTime</type>
</CustomField>