force-app/main/default/objects/Act_Cadence_Reassign_Queue__c/fields/OldAdvisorId__c.field-meta.xml
<CustomField>
    <fullName>OldAdvisorId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Advisor Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>