force-app/main/default/objects/Act_Cadence_Reassign_Queue__c/fields/OldOwner__c.field-meta.xml
<CustomField>
    <fullName>OldOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Old Owner Cadence Reassign Queues</relationshipLabel>
    <relationshipName>OldOwnerCadenceReassignQueues</relationshipName>
    <type>Lookup</type>
</CustomField>