force-app/main/default/objects/Act_Cadence_Reassign_Queue__c/fields/ProcessedAt__c.field-meta.xml
<CustomField>
    <fullName>ProcessedAt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Processed At</label>
    <type>DateTime</type>
</CustomField>