force-app/main/default/objects/Act_Cadence_Reassign_Queue__c/fields/TaskCount__c.field-meta.xml
<CustomField>
    <fullName>TaskCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Task Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>