force-app/main/default/objects/Act_Cadence_Reassign_Queue__c/fields/TrackerCount__c.field-meta.xml
<CustomField>
    <fullName>TrackerCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tracker Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>